<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RadioGroup
            android:id="@+id/holderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/basic_holder_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/view_holder"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/list_holder_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/list_holder"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/grid_holder_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/grid_holder"
                android:textColor="@android:color/black" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/positionRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/bottomPosition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/bottom"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/centerPosition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/center"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/topPosition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/top"
                android:textColor="@android:color/black" />
        </RadioGroup>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/configLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            app:flexWrap="wrap">

            <CheckBox
                android:id="@+id/headerCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/show_header" />

            <CheckBox
                android:id="@+id/footerCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/show_footer" />

            <CheckBox
                android:id="@+id/expandedCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/expanded" />

            <CheckBox
                android:id="@+id/fixedHeaderCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/fixed_header" />

            <CheckBox
                android:id="@+id/fixedFooterCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/fixed_footer" />

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/listCountInput"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/list_count"
                    android:text="@string/_16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contentHeightInput"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/content_height"
                    android:text="@string/_1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contentWidthInput"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/content_width"
                    android:text="@string/_1" />
            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.flexbox.FlexboxLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/showDialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/show_dialog" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>